welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:22: error: ';' expected but '(' found.
  fairecarre() : avance7() ; fairecarre()
                        ^