welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def Brosse() {
  baisseBrosse() ; leveBrosse()
}




def faireV(c:Color) {
  setCouleurBrosse(c:Color)
  avance() ; avance()
  Brosse() ; avance() ; gauche() ; avance() ; Brosse()
  recule() ; droite() ; avance() ; Brosse()
  avance() ; avance() ; gauche()
}


def fairecarre() {
  faireV(Color.YELLOW) ; faireV(Color.RED) ; faireV(Color.BLUE) ; faireV(Color.GREEN)
}

def faireligne() {
  fairecarre() : avance7() ; fairecarre()
}






override def run() {
  faireligne()
}